--- a/Sample_MVVMClean_UT/Sample_MVVMClean_UT/Presentation/MovieScene/MovieList/View/MoviesListViewController.storyboard
+++ b/Sample_MVVMClean_UT/Sample_MVVMClean_UT/Presentation/MovieScene/MovieList/View/MoviesListViewController.storyboard
@@ -56,11 +56,11 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="EzI-qX-rfe"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="EzI-qX-rfe" firstAttribute="bottom" secondItem="URz-eU-usl" secondAttribute="bottom" id="1Yg-At-OqX"/>
                             <constraint firstItem="EzI-qX-rfe" firstAttribute="trailing" secondItem="URz-eU-usl" secondAttribute="trailing" id="BnE-5X-3lQ"/>
                             <constraint firstItem="URz-eU-usl" firstAttribute="leading" secondItem="EzI-qX-rfe" secondAttribute="leading" id="DPb-Ts-omh"/>
+                            <constraint firstAttribute="bottom" secondItem="URz-eU-usl" secondAttribute="bottom" id="PDK-cj-e85"/>
                             <constraint firstItem="URz-eU-usl" firstAttribute="top" secondItem="EzI-qX-rfe" secondAttribute="top" id="upA-7z-ydG"/>
                         </constraints>
                     </view>
